test/expected/explain_o_qmark_colon_k2i_i.out
explain int operator?:(S, int, int)
          ^
11: error: operator "?:" can not be overloaded
